# ICSim

./: .gitignore  Makefile  README.md  config.h  controls  controls.c  icsim  icsim.c  meson.build  run.sh  setup_vcan.sh
art/: joypad.ora  joypad.xcf  meson.build
data/: meson.build
