# after meson 0.64 these could be replaced with fs.copyfile
# which happens at build time instead of configure
# not all package managers provide that recent of a version yet
configure_file(
    input: 'ic.svg',
    output: 'ic.svg',
    copy: true
)
configure_file(
    input: 'joypad.ora',
    output: 'joypad.ora',
    copy: true
)
configure_file(
    input: 'joypad.xcf',
    output: 'joypad.xcf',
    copy: true
)
