# after meson 0.64 these could be replaced with fs.copyfile
# which happens at build time instead of configure
# not all package managers provide that recent of a version yet
configure_file(
    input: 'ic.png',
    output: 'ic.png',
    copy: true
)
configure_file(
    input: 'joypad.png',
    output: 'joypad.png',
    copy: true
)
configure_file(
    input: 'needle.png',
    output: 'needle.png',
    copy: true
)
configure_file(
    input: 'sample-can.log',
    output: 'sample-can.log',
    copy: true
)
configure_file(
    input: 'spritesheet.png',
    output: 'spritesheet.png',
    copy: true
)
